# granite-workshop-rag-demonstration

./: granite_encoder.ipynb  pyproject.toml
