[project]
name = "granite-workshop-rag-demonstration"
version = "0.1.0"
description = "A technical demonstration about text embeddings applied to RAG using granite embeddings model"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "umap-learn>=0.5.7",
]
